# nonebot-plugin-picstatus

./: .env.example  LICENSE  README.md  pyproject.toml
nonebot_plugin_picstatus_re/: __init__.py  __main__.py  bg_provider.py  config.py
nonebot_plugin_picstatus_re/collectors/: disk.py  network.py
nonebot_plugin_picstatus_re/templates/: render.py
nonebot_plugin_picstatus_re/templates/default/: __init__.py
nonebot_plugin_picstatus_re/templates/default/res/css/: index.css
nonebot_plugin_picstatus_re/templates/default/res/templates/: index.html.jinja  macros.html.jinja
